- Implementación de más categorías reconocidas por la IA.